import spotipy

class SpotifyAPI:
    
    def __init__(self) -> None:
        """spotipyの初期化
        """
        pass

    def search_artist():
        pass

    def get_music_list_by_artist_id():
        pass