class FavoriteMusic:
    def __init__(self) -> None:
        pass

    def get_music_list():
        pass

    def register():
        pass

    def delete():
        pass